# exampleProjectStructure

./: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
